--- a/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
+++ b/LaTex/BachelorThesis/arbeit-vorlage-praeambel.tex
@@ -27,7 +27,7 @@
 % Sprache: Deutsch
 \usepackage[ngerman]{babel} % Silbentrennung
 % PDF
-\usepackage[ngerman,pdfauthor={Martin Bretschneider},  pdfauthor={Martin Bretschneider}, pdftitle={Vorlage für LaTeX}, breaklinks=true,baseurl={http://www.bretschneidernet.de/tips/thesislatex.html}]{hyperref}
+\usepackage[ngerman,pdfauthor={Michael Bauer},  pdfauthor={Michael Bauer}, pdftitle={Vorlage für LaTeX}, breaklinks=true,baseurl={http://www.bretschneidernet.de/tips/thesislatex.html}]{hyperref}
 \usepackage[final]{microtype} % mikrotypographische Optimierungen
 \usepackage{url}
 \usepackage{pdflscape} % einzelne Seiten drehen können
